# tsproj

./: .gitignore  README.md  README_old.md  data_wrangling.ipynb  experiments.ipynb  notebook_helper.py  pyproject.toml  requirements.txt  sf2.py  test.py  view_mat.py
cdlgr/: main.py
cdlgr/config/: default.yaml
cdlgr/config/dataset/: default_dataset.yaml  real_dataset.yaml  synth_dataset.yaml  synth_dataset_exp1.yaml  synth_dataset_exp2.yaml  synth_dataset_exp3.yaml  synth_dataset_exp4.yaml  synth_dataset_exp5.yaml  synth_dataset_exp6.yaml  synth_dataset_exp7.yaml  synth_dataset_exp8.yaml  synth_default_dataset.yaml
cdlgr/config/model/: default_model.yaml  real_dataset_model.yaml  synth_default_model.yaml  synth_model.yaml  synth_model_exp1.yaml  synth_model_exp2.yaml  synth_model_exp3.yaml  synth_model_exp4.yaml  synth_model_exp5.yaml  synth_model_exp6.yaml  synth_model_exp7.yaml  synth_model_exp8.yaml
cdlgr/config/output/: default_output.yaml
cdlgr/dataset/: dataset.py
cdlgr/model/: cdl.py  dictionary.py
cdlgr/outputs/: metrics.py  plot.py
cdlgr/plot/: plot.py
experiments/: spikesorting_comparison_result
experiments/sim/config/: config_data.yml  config_model.yml
experiments/sim/data/: T_3_noise_0.1_num_50_0.hdf5  T_3_noise_2.1_num_50_0.hdf5
experiments/sim/results/: CDL_snr
experiments/spikesorting_interp/config/: config_data.yml  config_model.yml
src/generators/: make_dataset.py
src/helpers/: descriptive.py
src/models/: BaseCSC.py  COMP.py  COMP2D.py
src/plotter/: plot.py
src/run_experiments/: extract_results.py  run_experiment.py
(+107 files in other folders)
